--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
                     <input type="email" id="modalEmail" name="email" class="bg-slate-700 border border-slate-600 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
                 </div>
                 <div class="mb-6">
-                    <label for="modalPhone" class="block text-sm font-medium text-gray-300 mb-1">Telefon (optional):</label>
-                    <input type="tel" id="modalPhone" name="phone" class="bg-slate-700 border border-slate-600 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <label for="modalPhone" class="block text-sm font-medium text-gray-300 mb-1">Telefon:</label>
+                    <input type="tel" id="modalPhone" name="phone" class="bg-slate-700 border border-slate-600 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
                 </div>
                 <div class="flex justify-end space-x-4">
                     <button type="button" onclick="hideContactModal()" class="bg-gray-500 hover:bg-gray-600 text-white font-semibold py-2 px-4 rounded-lg">Abbrechen</button>
